# reversi

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: DEPLOYMENT.md
.github/workflows/: ci-cd.yml  ci.yaml  release.yaml
assets/: README.md
docs/: plan.md
examples/: simple_test.rs
src/: lib.rs  main.rs  systems.rs
src/ai/: difficulty.rs  evaluation.rs  minimax.rs  mod.rs
src/audio/: mod.rs
src/fonts/: mod.rs
src/game/: board.rs  mod.rs  rules.rs
src/localization/: mod.rs  texts.rs
src/ui/: board_ui.rs  game_ui.rs  mod.rs
